best-practices-k8s/require_labels/require_labels.yaml
apiVersion: policies.kyverno.io/v1alpha1
kind: ValidatingPolicy
metadata:
    name: require-labels
    annotations:
        policies.kyverno.io/title: Require Labels
        policies.kyverno.io/category: Best Practices
        policies.kyverno.io/severity: medium
        kyverno.io/kyverno-version: 1.14.1
        policies.kyverno.io/subject: Pod, Label
        policies.kyverno.io/standards: "cis-eks,cis-kubernetes,cis-aks,cis-gke,iso27001,nsa-cisa,nist-800-53"
        policies.nirmata.io/nist-800-53-control: "CM-8"
        policies.kyverno.io/description: >-
            Define and use labels that identify semantic attributes of your application or Deployment. A common set of labels allows tools to work collaboratively, describing objects in a common manner that all tools can understand. The recommended labels describe applications in a way that can be queried. This policy validates that the label `app.kubernetes.io/name` is specified with some value.
spec:
    validationActions:
        - Audit
    evaluation:
        background:
            enabled: true
    matchConstraints:
        resourceRules:
            - apiGroups: [""]
              apiVersions: ["v1"]
              resources: ["pods"]
              operations: ["CREATE", "UPDATE"]
    validations:
        - expression: "has(object.metadata.labels) && ('app.kubernetes.io/name' in object.metadata.labels)"
          message: "The label `app.kubernetes.io/name` is required."
